# statstools

./: default.nix  pyproject.toml  result
src/statstools/: __init__.py  calculations.py
tests/: test_calculations.py
