[project]
name = "statstools"
version = "0.1.0"
description = "A simple Python package for basic descriptive statistics."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["src"]
